switch to fusebox.js

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,12 @@
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
     <link rel="shortcut icon" href="fable.ico" />
+    $css
   </head>
 
   <body>
     <div id="real-world-fable-app"></div>
+    $bundles
     <footer>
       <div class="container">
         <a href="/" class="logo-font">conduit</a>
