switch to snowpack

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
   <body>
     <div id="real-world-fable-app"></div>
+    <script src="/dist/App.fs.js" type="module"></script>
     <footer>
       <div class="container">
         <a href="/" class="logo-font">conduit</a>
@@ -31,5 +32,5 @@
         </span>
       </div>
     </footer>
-  <script type="text/javascript" src="vendors.744ef2262a696af0cfcf.js"></script><script type="text/javascript" src="main.744ef2262a696af0cfcf.js"></script></body>
+  </body>
 </html>
